--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,13 +13,10 @@ jobs:
       - uses: actions/checkout@v3
 
       # from https://github.com/gen2brain/raylib-go/blob/master/.github/workflows/build.yml
-      - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y \
-          libwayland-dev \
-          libxrandr-dev \
-          libxinerama-dev \
-          libxcursor-dev \
-          libxi-dev
+      - name: Install package
+        run: |
+          sudo apt-get update -y; sudo apt-get -y install libxi-dev libxinerama-dev libxcursor-dev libxrandr-dev libgl1-mesa-dev libwayland-dev libxkbcommon-dev
+        if: runner.os == 'Linux'
 
       - name: Set up Go
         uses: actions/setup-go@v4
